<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView">
    </TextView>
    <TextView
        android:id="@+id/stationFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:text="@string/stationFrom"/>

    <Spinner
        android:id="@+id/spinner_from"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/stationFrom"/>

    <TextView
        android:id="@+id/stationTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stationTo"
        android:layout_below="@+id/spinner_from"/>

    <Spinner
        android:id="@+id/spinner_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/stationTo"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="Продолжить" />

    <TextView
        android:id="@+id/choose_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView2"
        android:layout_marginTop = "25dp"
        android:layout_below="@+id/spinner_to"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop = "10dp"
        android:layout_below="@+id/choose_day">

    <RadioButton
        android:id="@+id/radio0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/radio0" />

    <RadioButton
        android:id="@+id/radio1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio1" />

    <RadioButton
        android:id="@+id/radio2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio2" />
    </RadioGroup>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="Debug" />
</RelativeLayout>